# properties.ai

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.backend  LICENSE  README.md  docker-compose.yml  mypy.ini  package.json  pip-audit.json  playwright.config.ts  pyproject.toml  pytest.ini  requirements.txt
.devcontainer/: devcontainer.json
.taskmaster/: config.json  state.json
.vercel/: project.json
agents/: hybrid_agent.py  query_analyzer.py  recommendation_engine.py
ai/: agent.py  app_services.py  memory.py  prompt_templates.py
analytics/: __init__.py  financial_metrics.py  market_insights.py  session_tracker.py  valuation_model.py
api/: auth.py  dependencies.py  main.py  models.py  observability.py  openapi_export.py  openapi_markdown.py
config/: settings.py
data/: csv_loader.py  schemas.py
docs/: AGENT_SYSTEM.md  API_REFERENCE.generated.md  API_REFERENCE.md  ARCHITECTURE.md  BRANCH_PROTECTION.md  CONTRIBUTING.md  DEFINITION_OF_DONE.md  DEPLOYMENT.md  DEVELOPER_NOTES.md  FEATURE_IDEAS_AND_INTEGRATIONS.md  PRD.MD  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  SECURITY.md  TESTING_GUIDE.md  TROUBLESHOOTING.md  USER_GUIDE.md  USER_GUIDE_TOOLS.md  design-system.md  openapi.json
frontend/: .gitignore  Dockerfile.frontend  README.md  jest.config.ts  package.json
i18n/: __init__.py  translations.py
models/: provider_factory.py  user_model_preferences.py
notifications/: __init__.py  alert_manager.py  digest_generator.py  email_service.py  email_templates.py  notification_history.py  notification_preferences.py  scheduler.py  uptime_monitor.py
rules/: __init__.py  base.py  (+3 more)
(+213 files in other folders)
