[project]
name = "ai-real-estate-assistant"
version = "4.0.0"
description = "AI-powered real estate assistant with FastAPI backend and Next.js frontend"
authors = [
    {name = "Alex Nesterovich", email = "alex@example.com"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "langchain>=0.3.0",
    "chromadb>=0.5.0",
    "pydantic>=2.0.0,<2.12",
    "openai>=1.0.0",
    "anthropic>=0.7.0",
    "google-generativeai>=0.8.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.5.0",
    "pytest-timeout>=2.3.1",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "httpx>=0.27.0",
    "bandit>=1.7.6",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/integration/api/test_cors_integration.py" = ["I001"]
"api/routers/*.py" = ["B008"]
"api/routers/tools.py" = ["I001"]
"agents/services/__init__.py" = ["I001", "F401"]
"agents/services/crm_connector.py" = ["I001"]
"agents/services/data_enrichment.py" = ["I001"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
